Update FreePriorityDispatchStrategy.java